--- a/First_day.ipynb
+++ b/First_day.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "856717df-84be-4bae-b69a-48d9438abc91",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "5236b894-9af7-4d43-a0c8-514db40ec722",
    "metadata": {},
    "outputs": [],
@@ -106,44 +106,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "e1480174-5a11-4456-91cc-467e946db3a7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "OneHotEncoder.__init__() got an unexpected keyword argument 'categorical_features'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[27]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m labelx= LabelEncoder()\n\u001b[32m      7\u001b[39m X[:,\u001b[32m0\u001b[39m]=labelx.fit_transform(X[:,\u001b[32m0\u001b[39m])\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m one = \u001b[43mOneHotEncoder\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcategorical_features\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m X = one.fit_transform(X).toarray()\n\u001b[32m     11\u001b[39m labely = LabelEncoder()\n",
-      "\u001b[31mTypeError\u001b[39m: OneHotEncoder.__init__() got an unexpected keyword argument 'categorical_features'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Categorical data are variables , which are in label form, But our machine want data in numerical form.\n",
     "# to deal with this problem, we use encoding, which turns this values in numerical form.\n",
-    "\n",
+    "import numpy as np\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
     "\n",
-    "labelx= LabelEncoder()\n",
-    "X[:,0]=labelx.fit_transform(X[:,0])\n",
+    "# Suppose X and Y are NumPy arrays\n",
+    "la = LabelEncoder()\n",
+    "X[:, 0] = la.fit_transform(X[:, 0])   # encode first column of X\n",
     "\n",
-    "one = OneHotEncoder(categorical_features = [0])\n",
-    "X = one.fit_transform(X).toarray()\n",
+    "one = OneHotEncoder()\n",
+    "X = one.fit_transform(X).toarray()    # convert to dense NumPy array\n",
+    "\n",
     "labely = LabelEncoder()\n",
-    "Y =  labely.fit_transform(Y)"
+    "Y = labely.fit_transform(Y)           # encode target labels\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0211cac7-a524-49f4-936f-e1a90c9c3d63",
+   "metadata": {},
+   "source": [
+    "### Step 5:- Splitting the Datasets in Train and Test size."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9f7b017b-c369-403e-b0be-a52eb746527b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For checking our model , we splits data sets into Train and Test size. For exposing model to seen or unseen data.\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Suppose X and Y are already preprocessed\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, Y, test_size=0.2, random_state=0\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8caffb37-dd9f-412d-8d51-5261ed74dc70",
+   "metadata": {},
+   "source": [
+    "### Step 6:- Feature Scaling"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf33c41c-8552-42fc-ba69-53a487a13887",
+   "id": "3fbb7736-207b-48a4-8989-1ba20c1bbbd7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "sc = StandardScaler()\n",
+    "X_train = sc.fit_transform(X_train)   # fit on training data\n",
+    "X_test = sc.transform(X_test)         # use same transform on test data\n"
+   ]
   }
  ],
  "metadata": {
